<resources>
    <string name="app_name">My Pet\'s Age</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About this App</string>
    <string name="action_add_pet">Add Pet</string>
    <string name="action_edit_pet">Edit Pet</string>
    <string name="action_delete_pet">Delete Pet</string>
    <string name="action_save_pet">Save Pet</string>

    <string name="action_pet_created">%1$s has been added!</string>
    <string name="action_pet_updated">%1$s has been changed!</string>
    <string name="action_pet_deleted">%1$s has been deleted!</string>
    <string name="action_pet_update_failed">failed to change pet!</string>
    <string name="action_pet_not_saved">failed to save pet!</string>

    <string name="empty_pet_list">No pets found! Add a pet</string>

    <string name="pet_form_failed">Fill in all fields to save your pet</string>

    <string name="pet_name">Name</string>
    <string name="pet_avatar">Picture</string>
    <string name="pet_date_of_birth">Date of Birth</string>
    <string name="pet_date_of_decease">Date of Decease</string>

    <string name="pet_age_regular">%1$d years, %2$d months, %3$d days</string>
    <string name="pet_age_years">%1$d years</string>
    <string name="pet_age_months">%1$d months</string>
    <string name="pet_age_weeks">%1$d weeks</string>
    <string name="pet_age_days">%1$d days</string>

    <string name="settings_age_display">Age Display</string>
    <string name="settings_age_display_summary">Define the way how you want to display the age</string>

    <string name="app_version">App Version</string>
    <string name="app_build_number">Build Number</string>
    <string name="app_support_address">Support</string>
    <string name="app_translations">Translations</string>
    <string name="app_privacy_policy">Privacy Policy</string>
</resources>
