<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".PetActivity">


    <ImageButton
        android:id="@+id/PetAvatar"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:contentDescription="@string/pet_avatar"
        android:gravity="center"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_foreground" />

    <EditText
        android:id="@+id/PetName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="false"
        android:hint="@string/pet_name"
        android:inputType="textPersonName|textCapSentences"
        android:minHeight="48dp"
        android:textColorHint="#546E7A" />

    <EditText
        android:id="@+id/PetDateOfBirth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="false"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/pet_date_of_birth"
        android:inputType="date"
        android:minHeight="48dp"
        android:textColorHint="#546E7A" />

    <Spinner
        android:id="@+id/petStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:textColorHint="#546E7A" />

    <EditText
        android:id="@+id/PetDateOfDecease"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="false"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/pet_date_of_decease"
        android:inputType="date"
        android:minHeight="48dp"
        android:textColorHint="#546E7A" />

</LinearLayout>